gitops/apps/forensic-sandbox/base/istio-rules.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: block-rds-egress
  namespace: forensic-sandbox
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    matchLabels:
      sandbox-tier: strict-isolation 
  action: DENY
  rules:
  - to:
    - operation:
        ports: ["3306"]
